--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -31,12 +31,9 @@
       margin-bottom: 10px;
       color: #555;
       text-align: center;
-      margin-top: 10px;
-      color: #4F4F4F;
     }
 
     input[type="text"],
-    input[type="title"],
     textarea {
       width: 100%;
       padding: 10px;
@@ -51,7 +48,7 @@
     }
 
     input[type="submit"],
-    .link-box {
+    .link-button {
       display: inline-block;
       padding: 10px 20px;
       color: #fff;
@@ -66,27 +63,27 @@
       transition: background-color 0.3s ease;
       box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
     }
-    input[type="submit"] {
-    background-color: #4CAF50;
-    }
-    .link-box:hover {
+
+    input[type="submit"]:hover,
+    .link-button:hover {
       background-color: #2980b9;
     }
-     input[type="submit"]:hover {
-      background-color: #45a049;
+    .center {
+      display: flex;
+      justify-content: center;
     }
-
   </style>
-  <title>add movie</title>
+  <title>Add movie</title>
 </head>
 <body>
   <h1>Add movie</h1>
   <form method="post" action="">
     <label for="name"><strong>Name:</strong></label>
     <input type="text" id="name" name="name" required autocomplete="off">
-    <div>
-      <input type="submit" value="Submit">
-    </div>
+    <input type="submit" value="Submit">
   </form>
+  <div class="center">
+    <a href="{{ url_for('user_movies', user_id=user_id) }}" class="link-button">Back to My Movies</a>
+  </div>
 </body>
 </html>
