--- a/templates/update_movie.html
+++ b/templates/update_movie.html
@@ -75,6 +75,24 @@
      input[type="submit"]:hover {
       background-color: #45a049;
     }
+    .button {
+      display: inline-block;
+      padding: 10px 20px;
+      color: #fff;
+      background-color: #e74c3c;
+      border: none;
+      border-radius: 4px;
+      cursor: pointer;
+      margin-top: 10px;
+      text-decoration: none;
+      font-size: 16px;
+      font-weight: bold;
+      transition: background-color 0.3s ease;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    }
+    .button:hover {
+      background-color: #c0392b;
+    }
   </style>
  <title>Update movie</title>
 </head>
